# total_variation

./: README.md  setup.cfg
src/TV/: tv.py
src/operators/: opD.py  opL.py  opLt.py
