[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 0.0.1
author = Adrien Hernandez
author_email = adrienhernandez16@gmail.com
description = package de variation totale 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdrienHrdz/total_variation
project_urls =
    Bug Tracker = https://github.com/AdrienHrdz/total_variation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src